large changes made, not sure if there are bugs yet

--- a/SocialApp/SocialApp.csproj
+++ b/SocialApp/SocialApp.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommentsActivity.cs" />
+    <Compile Include="CommentsAdapter.cs" />
     <Compile Include="CommentsInfo.cs" />
     <Compile Include="CustomAdapter.cs" />
     <Compile Include="DataTransfer.cs" />
