--- a/SocialApp/SocialApp.csproj
+++ b/SocialApp/SocialApp.csproj
@@ -133,6 +133,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\bckgrnd.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bread.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
